  * Lintian fixes.
  * Simplify and stabilize tests
  * Remove USE_STATIC_MYSQLD
  * Add test plan to README.Maintainer
  * Add --force rationale to test plan
  * Remove special build options for taocrypt

  [ Bjoern Boschman ]
  * Removed hardening-wrapper from build-deps.
  * Added python dep for mysql-testsuite-5.6.
  * Added dpkg-dev dep.
  * Cleanup a bit more.

  [ Robie Basak ]
  * Add dep8 smoke test.
  * Re-enable libmysqld-pic, libmysqld-dev, libmysqlclient18 and
    libmysqlclient-dev (renamed accordingly) to replace binary packages
    provided by src:mysql-5.5.
  * Add mysql-server, mysql-client and mysql-testsuite to be switched
    over from src:mysql-5.5.
  * Import mysql-common from src:mysql-5.5 for 5.5 -> 5.6 switchover.
  * Cherry-pick relevant parts of Ubuntu delta from mysql-5.5:
    - d/mysql-server-5.5.postrm: restoring postrm debhelper token to get
      proper behaviors from dh_installinit and dh_apparmor.
    - Add Apport hook.
  * Drop unused variable definition
  * Create /etc/mysql manually in debian/rules
  * Replace conf.d/.keepme with an empty directory
  * wrap-and-sort for systemd change
  * Drop unnecessary binary target
  * Fix race between builds and source tar generation
  * Move innochecksum to server package
  * Replace unversioned Breaks with Conflicts
  * Switch to new /etc/mysql/my.cnf management scheme
  * Request my.cnf symlink from server package
  * Drop mysql-common-5.6
  * Conflict and Replace 5.5 server packages
  * Fix dep8 smoke test dependency
  * Amend AppArmor profile to permit reads of everything in /etc/mysql/, now
    that we have a number of included directories in there
  * Ship my-default.cnf with mysql-server-core-5.6 (LP: #1422391).
  * Add mysql-server-core-5.6 Breaks/Replaces older mariadb-client-10.0
    since innochecksum has moved into the server package across all
    variants (LP: #1421520).
  * AppArmor-related fixes (LP: #1421303):