@@ -1,2 +1,0 @@
-usr/bin/mysql_config_pic
-usr/lib/mysql/libmysqld_pic.a
