@@ -1,1 +1,0 @@
-debian/tmp/usr/share/man/man1/mysql_config_pic.1
